--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div class="cards-wrappers">
         <div class="card">
           <strong>What is Lorem Ipsum?</strong>
-          <figure><img src="#" alt="" /></figure>
+          <figure><img src="images/perfil1.jpg" alt="" /></figure>
           <div class="card-detail">
             <p>
               Lorem Ipsum is simply dummy text of the printing and typesetting
@@ -61,7 +61,7 @@
         </div>
         <div class="card">
           <strong>What is Lorem Ipsum?</strong>
-          <figure><img src="#" alt="" /></figure>
+          <figure><img src="images/perfil2.jpg" alt="" /></figure>
           <div class="card-detail">
             <p>
               Lorem Ipsum is simply dummy text of the printing and typesetting
@@ -75,7 +75,7 @@
         </div>
         <div class="card">
           <strong>What is Lorem Ipsum?</strong>
-          <figure><img src="#" alt="" /></figure>
+          <figure><img src="images/perfil3.jpg" alt="" /></figure>
           <div class="card-detail">
             <p>
               Lorem Ipsum is simply dummy text of the printing and typesetting
